	    + pql_maybe_idna_encode()		pql_maybe_idna_decode()
	    + printr()                		lc()
	  - Simplify the creation of the tree view - moved to separate functions.
	    Opera and non-opera, as well as 'top' and 'link' funcs. Should be much
	    more generic and most of all - higher code redability!
	  - Implemented pql_unit_exist() and pql_unit_add()

phpQLAdmin 2.0.17 Release (Oct 30 2003)
	Bug fixes
	  - Missing inclusion of the domain and/or rootdn value in URLs.
	    Closes bug 47
	  - Spelling error (s/, /=>/) in use of pql_complete_constant(array()).
	  - URL decode the domain DN at the correct time in each of the attribute
	    change page (when building the message).
	  - Add the root DN value to the call for bind9_add.php.
	  - Misc PHP, HTML and URL code fixes. Includes 'remember variable
	    throughout the form and urlencode/-decode in the correct places and missing
	    values etc.
	    Closes bugs 49, 56 to 59, 63, 64
	  - Misc missing % in call to pql_complete_constant() fixed.
	  - Final touches of the Bind(9) editor. Should now be able to do everything
	    needed with a zone in LDAP.
	  - Only force the dcOrganizationNameForm objectclass if we're using 'dc'
	    (domain component) as the branch separator.
	  - Avoid future overloading of $value by replacing it with a truly uniq name in
	    include/pql_config.inc.
	    Closes bug 52.
	  - Fix user_add.php form errors (checks in wrong places).
	    Closes bug 65
	  - Make sure (!) that any '{crypt}' passwords really contain DES encrypted
	    passwords by using a salt to crypt().
	    Closes bug 66

	GUI layout change
	  - Say 'LDAP Server' instead of 'Host' in the left frame - more descriptive.
	  - Rudimentary support for webserver administration. Changes to the schema was
	    done!
	  - Support Opera (folding branches).
	  - Option to set the account expiration date. This uses the shadowExpire
	    attribute allowed in the shadowAccount (which require only the uid